--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,64 +1,133 @@
-:root{
-    --lh-color-primany: #1966ff; // logo 颜色
+:root {
+  --lh-color-primany: #1966ff; // logo 颜色
 
-    --jy-color-white: #fff;
-    --jy-color-black: #2b2f38;
-    --jy-color-primary: #1966ff;
-    --jy-border-color: #f1f2f3;
-    --jy-color-hover: #3c3c3c;
+  --jy-color-white: #fff;
+  --jy-color-black: #2b2f38;
+  --jy-color-primary: #1966ff;
+  --jy-border-color: #f1f2f3;
+  --jy-color-hover: #3c3c3c;
 
-    // 菜单的背景色
-    --jy-bg-menuMainColor : var(--jy-color-white) !important;
-    // 选中的菜单背景色
-    --jy-bg-menuActiveColor: var(--jy-color-black) !important;
-    // 鼠标移入到菜单的背景色
-    --jy-bg-menuHoverColor: var(--jy-color-black) !important;
-    // 菜单文字默认颜色
-    --jy-text-menuMainColor: var(--jy-color-black) !important;
-    //  选中的菜单文字颜色
-    --jy-text-menuActiveColor: var(--jy-color-white) !important;
-    // 鼠标移入到菜单的文字色
-    --jy-text-menuHoverColor: var(--jy-color-white) !important;
-    // header的背景颜色
-    --jy-bg-headerBarColor: var(--jy-color-white) !important;
-    --jy-color-user-hover: var(--jy-color-hover-rgba) !important;
-    --jy-border-color-light: var(--jy-border-color) !important;
+  // 菜单的背景色
+  --jy-bg-menuMainColor: var(--jy-color-white) !important;
+  // 选中的菜单背景色
+  --jy-bg-menuActiveColor: var(--jy-color-black) !important;
+  // 鼠标移入到菜单的背景色
+  --jy-bg-menuHoverColor: var(--jy-color-black) !important;
+  // 菜单文字默认颜色
+  --jy-text-menuMainColor: var(--jy-color-black) !important;
+  //  选中的菜单文字颜色
+  --jy-text-menuActiveColor: var(--jy-color-white) !important;
+  // 鼠标移入到菜单的文字色
+  --jy-text-menuHoverColor: var(--jy-color-white) !important;
+  // header的背景颜色
+  --jy-bg-headerBarColor: var(--jy-color-white) !important;
+  --jy-color-user-hover: var(--jy-color-hover-rgba) !important;
+  --jy-border-color-light: var(--jy-border-color) !important;
 }
 
 // menu 布局
-.el-menu{
-    border-right: none !important;
+.el-menu {
+  border-right: none !important;
 }
-.el-menu-item, .el-sub-menu__title{
-    color: var(--jy-text-menuMainColor) !important; // 字体颜色
-    background-color: var(--jy-bg-menuMainColor) !important; // 背景颜色
+.el-menu-item,
+.el-sub-menu__title {
+  color: var(--jy-text-menuMainColor) !important; // 字体颜色
+  background-color: var(--jy-bg-menuMainColor) !important; // 背景颜色
 }
-.el-menu-item:hover{ // 鼠标滑过样式
-    color:  var(--jy-text-menuHoverColor) !important;
-    background-color: var(--jy-bg-menuHoverColor) !important;
+.el-menu-item:hover {
+  // 鼠标滑过样式
+  color: var(--jy-text-menuHoverColor) !important;
+  background-color: var(--jy-bg-menuHoverColor) !important;
 }
-.el-menu-item.is-active{  // 选中样式
-    color:  var(--jy-text-menuActiveColor) !important;
-    background-color: var(--jy-bg-menuActiveColor) !important;
+.el-menu-item.is-active {
+  // 选中样式
+  color: var(--jy-text-menuActiveColor) !important;
+  background-color: var(--jy-bg-menuActiveColor) !important;
 }
 
-// logo 
-.layout-aside-login{
-    height: 55px;
+// logo
+.layout-aside-login {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--lh-color-primany);
+  > img {
+    width: 33px;
+    height: 33px;
+    margin-right: 10px;
+  }
+  > div {
+    font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+.el-aside {
+  border-right: 1px solid #eee;
+}
+
+.aside-store-60 {
+  width: 60px !important;
+  transition: width 0.3s ease;
+}
+.aside-store-200 {
+  width: 200px !important;
+  transition: width 0.3s ease;
+}
+
+.el-header {
+  padding: 0 10px;
+  // background-color: #fcf;
+  height: 60px!important;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #eee;
+  .header-left-sty {
     display: flex;
     align-items: center;
-    justify-content: center;
-    color:  var(--lh-color-primany);
-    >img{
-        width: 33px;
-        height: 33px;
-        margin-right: 10px;
-    }
-    >div{
-        font-size: 14px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
+  }
+  .lay-header-left-icon {
+    margin-right: 16px;
+    cursor: pointer;
+  }
 }
 
+.header-right-icon{
+    height: inherit !important;
+    display: flex;
+    align-items: center;
+    padding: 0 6px;
+    cursor: pointer;
+}
+.header-right-icon:hover{
+    background-color: #eee;
+}
+
+.header-right-switch{
+    display: flex;
+    align-items: center;
+    padding: 0 6px;
+    height: inherit !important;
+    justify-content: center;
+}
+.header-right-switch:hover{
+    background-color: #eee;
+}
+
+.header-right-user {
+//   .none-outline {
+    
+    .el-dropdown-link {
+      display: flex !important;
+      align-items: center !important;
+    outline: none !important;
+
+      .rgiht-user {
+        margin: 0 10px;
+      }
+    }
+//   }
+}
