--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -32,7 +32,7 @@
 .el-menu-item,
 .el-sub-menu__title {
   color: var(--jy-text-menuMainColor) !important; // 字体颜色
-  background-color: var(--jy-bg-menuMainColor) !important; // 背景颜色
+  background-color: transparent !important; // 背景颜色
 }
 .el-menu-item:hover {
   // 鼠标滑过样式
@@ -43,6 +43,24 @@
   // 选中样式
   color: var(--jy-text-menuActiveColor) !important;
   background-color: var(--jy-bg-menuActiveColor) !important;
+}
+
+.dark2 {
+  .el-menu-item,
+  .el-sub-menu__title {
+    color: var(--jy-text-menuActiveColor) !important; // 字体颜色
+    background-color: transparent !important; // 背景颜色
+  }
+  .el-menu-item:hover {
+    // 鼠标滑过样式
+    color: var(--jy-text-menuHoverColor) !important;
+    background-color: #2e436e !important;
+  }
+  .el-menu-item.is-active {
+    // 选中样式
+    color: var(--jy-text-menuActiveColor) !important;
+    background-color: var(--lh-color-primany) !important;
+  }
 }
 
 // logo
@@ -80,7 +98,7 @@
 .el-header {
   padding: 0 10px;
   // background-color: #fcf;
-  height: 60px!important;
+  height: 60px !important;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -95,39 +113,78 @@
   }
 }
 
-.header-right-icon{
-    height: inherit !important;
-    display: flex;
-    align-items: center;
-    padding: 0 6px;
-    cursor: pointer;
+.header-right-icon {
+  height: inherit !important;
+  display: flex;
+  align-items: center;
+  padding: 0 6px;
+  cursor: pointer;
 }
-.header-right-icon:hover{
-    background-color: #eee;
+.header-right-icon:hover {
+  background-color: #eee;
 }
 
-.header-right-switch{
-    display: flex;
-    align-items: center;
-    padding: 0 6px;
-    height: inherit !important;
-    justify-content: center;
+.header-right-switch {
+  display: flex;
+  align-items: center;
+  padding: 0 6px;
+  height: inherit !important;
+  justify-content: center;
 }
-.header-right-switch:hover{
-    background-color: #eee;
+.header-right-switch:hover {
+  background-color: #eee;
 }
 
 .header-right-user {
-//   .none-outline {
-    
-    .el-dropdown-link {
-      display: flex !important;
-      align-items: center !important;
+  //   .none-outline {
+
+  .el-dropdown-link {
+    display: flex !important;
+    align-items: center !important;
     outline: none !important;
 
-      .rgiht-user {
-        margin: 0 10px;
-      }
+    .rgiht-user {
+      margin: 0 10px;
     }
-//   }
+  }
+  //   }
+}
+
+.el-main-main {
+  padding: 0 !important;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.el-scrollbar {
+  padding: 20px;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  // background-color: pink;
+}
+
+.error-401 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  > img {
+    width: 320px;
+  }
+  p {
+    font-size: 13px;
+    color: #999;
+    margin: 10px 0 30px 0;
+  }
+  .error-usian{
+    border: 2px solid #eee;
+    border-radius: 6px;
+    box-sizing: border-box;
+    padding: 20px  120px;
+  }
 }
