--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -122,6 +122,7 @@
 }
 .header-right-icon:hover {
   background-color: #eee;
+  color: #2b2f38;
 }
 
 .header-right-switch {
@@ -142,7 +143,7 @@
     display: flex !important;
     align-items: center !important;
     outline: none !important;
-
+    box-sizing: border-box;
     .rgiht-user {
       margin: 0 10px;
     }
