--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -7,7 +7,10 @@
     height: 100vh;
 }
 
-// logo
-// .el-container{
-    
-// }
+
+.index-main{
+    border: 1px solid #eee;
+    padding: 15px;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
