--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -13,6 +13,9 @@
     padding: 15px;
     box-sizing: border-box;
     border-radius: 10px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 .el-scrollbar{
     padding: 0 !important;
